fixed nav bar issue on small screens

--- a/src/app/footer/trademark/trademark.component.css
+++ b/src/app/footer/trademark/trademark.component.css
@@ -11,13 +11,14 @@
   padding: 5px;
   font-weight: 300;
   letter-spacing: 1px;
-  font-size: 75%;
+  font-size: 10px;
 }
 
 @media screen and (max-width: 690px) {
   .trademark-container p {
-    font-size: 60%;
+    font-size: 8px;
   }
 }
+
 
 
